src/test/deca/context/invalid/provided/class1.deca
class A{
    int x =5;
}
{
    print(x);
}